welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if (a!=b & b=c || b!=c & a=c)
           ^greenTicket:2: error: value || is not a member of Int
  if (a!=b & b=c || b!=c & a=c)
                 ^greenTicket:2: error: type mismatch;
 found   : Int
 required: Boolean
  if (a!=b & b=c || b!=c & a=c)
                           ^greenTicket:4: error: reassignment to val
  else if (a=b & b=c)
            ^