welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
  if (a!=b & b=c || b!=c & a=c)
  	return 10
  else if (a=b & b=c)
  	return 20
  else
  	return 0
}